fixed the contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -40,7 +40,7 @@ nav a {
 	text-align: center;
 	width: 12rem;
 	padding: 1rem;
-	color: #72739f;
+	color: black;
 	position: relative;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	transition: background 0.5s ease-in-out;
